--- a/application-sets/my-application-sets/many-app-many-clusters.yaml
+++ b/application-sets/my-application-sets/many-app-many-clusters.yaml
@@ -27,3 +27,7 @@ spec:
       destination:
         server: '{{server}}'
         namespace: '{{path.basename}}'
+        syncPolicy:
+      automated: {}
+      syncOptions:
+        - CreateNamespace=true
