--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -27,8 +27,8 @@ spec:
     kind: Deployment
     jsonPointers:
     - /metadata/annotations/creation
-  - group: v1
+  - group: *
     kind: Secret
     jsonPointers:
-    - /data/my-password
+    - /data/*
    
