--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -27,8 +27,7 @@ spec:
     kind: Deployment
     jsonPointers:
     - /metadata/annotations/creation
-  - group: *
+  - group: v1
     kind: Secret
     jsonPointers:
-    - /data/*
-   
+    - /data/  
